feat(pets): add profile aggregation
